mik-sdk-macros/tests/ui/fetch/duplicate_option.stderr
error: Duplicate 'headers' option. Each option can only appear once.
 --> tests/ui/fetch/duplicate_option.rs:7:9
  |
7 |         headers: { "B": "2" }
  |         ^^^^^^^
